[gd_scene load_steps=2 format=3 uid="uid://tj5n6h1g7s63"]

[ext_resource type="Script" path="res://Cast.gd" id="1_20xe4"]

[node name="Cast" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_20xe4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.37
anchor_top = 0.469
anchor_right = 0.63
anchor_bottom = 0.531
offset_left = -0.23999
offset_top = 0.0879822
offset_right = 0.239929
offset_bottom = -0.0880127
grow_horizontal = 2
grow_vertical = 2

[node name="castProgress" type="ProgressBar" parent="Panel"]
layout_mode = 0
offset_right = 298.0
offset_bottom = 40.0

[node name="castTarget" type="ProgressBar" parent="Panel"]
layout_mode = 0
offset_left = 2.0
offset_top = -28.0
offset_right = 300.0
offset_bottom = -1.0

[node name="close" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="close" to="." method="_on_close_timeout"]
